# LingYi

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  config.py  model_provider.py  pyproject.toml  refactor-lingyi.md  start.ps1  start.sh  实施计划.md  灵医2.0.md  灵医_技术报告.md
.claude/plans/: optimize-performance.plan.md  refactor-lingyi.plan.md
TCM_data/: 伤寒论_完整清洗版.txt  温病条辨_完整清洗版.txt  神农本草经_完整清洗版.txt  脉经_完整清洗版.txt  金匮要略_完整清洗版.txt  黄帝内经-素问_完整清洗版.txt
agent/: graph.py  prompts.py  state.py
agent/memory/: __init__.py  checkpointer.py  summarizer.py
agent/skills/: diagnosis.md  diagnosis.py  inquiry.md  inquiry.py  rag_search.md  rag_search.py  reader.py  safety_guard.md  safety_guard.py  treatment.md  treatment.py  writer.py
data_pipeline/: __init__.py  base.py  cleaners.py  ingest.py
data_pipeline/chunkers/: __init__.py  jingui.py  maijing.py  registry.py  shanghan.py  shennong.py  suwen.py  wenbing.py
docs/: architecture.md  data_pipeline.md  deployment.md  rag.md  skills.md
frontend/: next.config.ts  package-lock.json  package.json
lingyi/: __init__.py  config.py  exceptions.py  logging.py
lingyi/agent/: __init__.py  graph.py  state.py
lingyi/api/: __init__.py  (+3 more)
storage/: patient_profiles.db-shm  patient_profiles.db-wal  profile_manager.py
tests/: conftest.py  stubs.py  test_config.py  test_diagnosis.py  test_factory.py  test_inquiry.py  test_json_parsing.py  test_parsers.py  test_profile_writer.py  test_rag_search.py  test_safety_rules.py  test_summarizer.py  test_treatment.py
tools/: file_parser.py  ingest.py  safety_rules.py  vector_db_client.py
(+73 files in other folders)
